# weather-api-investigation

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
datosWeather/VissualCrossingWeather/: VissualCrossingWeatherTesting.py  mapa_visualcrossing.html  visualcrossing_atributos_clima.csv  visualcrossing_estaciones_argentina.csv
datosWeather/WeatherAPI/: weatherAPI.py  weather_conditions.numbers  weatherapi_estaciones_argentina.csv
datosWeather/meteostats/: entendiendo_meteoStats.py
datos_weather/: utiles.py
datos_weather/meteostats/: entendiendo_meteostats.py  mapa_meteostats.html  meteostats_estaciones_argentina.csv
datos_weather/vissual_crossing_weather/: mapa_visualcrossing.html  vissual_crossing_weather_testing.py
datos_weather/vissual_crossing_weather/recursos/: mapa_visualcrossing.html
datos_weather/weather_api/: mapa_weatherapi.html  weather_api.py  weatherapi_atributos_clima.csv
weather_api_investigation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
