[project]
name = "weather-api-investigation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "folium>=0.20.0",
    "meteostat>=1.7.4",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
